--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@types/koa-static": "^4.0.1",
     "@types/koa__cors": "^2.2.3",
     "axios": "^0.18.0",
+    "chalk": "^2.4.2",
     "copyfiles": "^2.1.0",
-    "get-port": "^4.1.0",
+    "get-port": "^4.2.0",
     "ilp": "^14.1.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
@@ -44,9 +45,7 @@
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
-    "localtunnel": "^1.9.1",
-    "moneyd-uplink-xrp": "^1.3.4",
-    "moneyd": "^4.3.0"
+    "localtunnel": "^1.9.1"
   },
   "devDependencies": {
     "@types/jest-diff": "^20.0.0",
