--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,22 +15,32 @@
             "protocol": "inspector"
         },
         {
+            "name": "Debug Electron App",
             "type": "node",
-            "request": "attach",
-            "name": "Attach by Process ID",
-            "processId": "${command:PickProcess}",
+            "request": "launch",
+            "cwd": "${workspaceRoot}",
+            "preLaunchTask": "npm: build",
+            "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
+            "windows": {
+              "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
+            },
             "outFiles": [
-                "${workspaceFolder}/distlib/src/index.js"
-            ]
-        },
+                "${workspaceRoot}/distlib/src/server/index.js",
+            ],
+            "runtimeArgs": [
+                "--remote-debugging-port=9223",
+                "./distlib/src/server/index.js"
+            ],
+            "protocol": "inspector"
+          },
         {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/distlib/src/index.js",
+            "program": "${workspaceFolder}/distlib/src/server/index.js",
             "preLaunchTask": "npm: build",
             "outFiles": [
-                "${workspaceFolder}/distlib/src/index.js"
+                "${workspaceFolder}/distlib/src/server/index.js"
             ]
         }
     ]
