Fixes on server creation

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "copyfiles": "^2.1.0",
     "get-port": "^4.2.0",
     "ilp": "^14.1.0",
+    "ilp-plugin-ethereum": "^3.0.0-beta.17",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-combine-routers": "^4.0.2",
@@ -61,7 +62,7 @@
     "@types/jest-diff": "^20.0.0",
     "codius": "^3.1.0",
     "electron": "^4.1.1",
-    "expo-cli": "^2.13.0",
+    "expo-cli": "^2.14.0",
     "jest": "^24.1.0",
     "jest-diff": "^24.0.0",
     "nodemon": "^1.18.10",
