Moneyd running inside docker container both live and in test

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ilp": "^14.1.0",
     "ilp-plugin": "^3.2.1",
     "ilp-plugin-ethereum": "^3.0.0-beta.17",
+    "ilp-plugin-xrp-asym-client": "^1.6.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-combine-routers": "^4.0.2",
@@ -54,18 +55,20 @@
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "localtunnel": "^1.9.1",
+    "node-fetch": "^2.3.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "ripple-keypairs": "^0.11.0"
   },
   "devDependencies": {
     "@types/jest-diff": "^20.0.0",
     "codius": "^3.1.0",
     "electron": "^4.1.1",
-    "expo-cli": "^2.15.0",
+    "expo-cli": "^2.15.3",
     "jest": "^24.1.0",
     "jest-diff": "^24.0.0",
     "nodemon": "^1.18.10",
