--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "localtunnel": "^1.9.1",
+    "minimist": "^1.2.0",
     "node-fetch": "^2.3.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -68,9 +69,9 @@
   },
   "devDependencies": {
     "@types/jest-diff": "^20.0.0",
+    "@types/minimist": "^1.2.0",
     "codius": "^3.1.0",
     "electron": "^4.1.1",
-    "expo-cli": "^2.15.3",
     "jest": "^24.1.0",
     "jest-diff": "^24.0.0",
     "nodemon": "^1.18.10",
