--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.5",
     "@types/redux-form": "^8.1.1",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "chalk": "^2.4.2",
     "copyfiles": "^2.1.0",
     "get-port": "^4.2.0",
@@ -46,6 +46,7 @@
     "ilp-plugin-ethereum": "^3.0.0-beta.17",
     "ilp-plugin-xrp-asym-client": "^1.6.0",
     "ilp-plugin-xrp-paychan-shared": "^4.1.3",
+    "is-docker": "^2.0.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-combine-routers": "^4.0.2",
@@ -55,7 +56,7 @@
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
-    "localtunnel": "^1.9.1",
+    "localtunnel": "^1.9.2",
     "minimist": "^1.2.0",
     "node-fetch": "^2.3.0",
     "react": "^16.8.5",
