--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   app: 
     build: .
     ports:
+      - "80:80"
+      - "433:433"
       - "8081:8081" 
       - "9229:9229"
       - "5000:5000"
@@ -16,6 +18,6 @@ services:
       - "--uplinkName"
       - "XRP"
       - "--testnet"
-      - "false"
+      - "true"
       - "--secret"
       - ""
